# spotify_downloader

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  tmp.md
src/: config.rs  lib.rs  main.rs  spotify.rs
src/spotify/: creds.rs  playlist.rs
