[package]
name = "spotify_downloader"
description = "Downloads Spotify playlists"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/MattTheCuber/spotify_downloader"
repository = "https://github.com/MattTheCuber/spotify_downloader"
documentation = "https://github.com/MattTheCuber/spotify_downloader/blob/master/README.md"
readme = "README.md"

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
rspotify = "0.11.4"
ytd-rs = { version = "0.1.6", features = ["yt-dlp"] }
thiserror = "1.0.30"